# concatfiles

./: CMakeLists.txt
concatfiles/: CMakeLists.txt  concatfiles.cpp  concatfiles.h  concatfiles.hpp
concatfiles/include/: concatfiles.hpp
concatfiles/src/: concatfiles.cpp
tests/: basic_tests.cpp
